--- a/requirements.txt
+++ b/requirements.txt
@@ -7,30 +7,31 @@ decorator==4.4.1
 defusedxml==0.6.0
 entrypoints==0.3
 importlib-metadata==0.23
-ipykernel==5.1.3
-ipyleaflet==0.11.4
+ipykernel==5.1.4
+ipyleaflet==0.12.2
 ipython==7.9.0
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
 jedi==0.15.1
-Jinja2==2.10.3
+Jinja2==2.11.1
 jsonschema==3.1.1
 jupyter-client==5.3.4
 jupyter-core==4.6.1
 kiwisolver==1.1.0
 MarkupSafe==1.1.1
-matplotlib==3.1.1
+matplotlib==3.1.3
 mistune==0.8.4
 more-itertools==7.2.0
 nbconvert==5.6.1
-nbformat==4.4.0
-notebook==6.0.2
-numpy==1.16.5
-pandas==0.25.3
+nbformat==5.0.4
+notebook==6.0.3
+numpy==1.18.1
+pandas==1.0.1
 pandocfilters==1.4.2
 parso==0.5.1
 pexpect==4.7.0
 pickleshare==0.7.5
+pkg-resources==0.0.0
 prometheus-client==0.7.1
 prompt-toolkit==2.0.10
 ptyprocess==0.6.0
@@ -39,7 +40,7 @@ pyparsing==2.4.4
 pyrsistent==0.15.5
 python-dateutil==2.8.1
 pytz==2019.3
-pyzmq==18.1.0
+pyzmq==18.1.1
 Send2Trash==1.5.0
 six==1.13.0
 terminado==0.8.2
