--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ pandocfilters==1.4.2
 parso==0.5.1
 pexpect==4.7.0
 pickleshare==0.7.5
+pkg-resources==0.0.0
 prometheus-client==0.7.1
 prompt-toolkit==2.0.10
 ptyprocess==0.6.0
@@ -42,7 +43,7 @@ pytz==2019.3
 pyzmq==18.1.1
 Send2Trash==1.5.0
 six==1.13.0
-terminado==0.8.2
+terminado==0.8.3
 testpath==0.4.4
 tornado==6.0.3
 traitlets==4.3.3
